Fix issue that would cause laggy scroll on iOS.

--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -1,8 +1,3 @@
-html, body {
-  height: 100%;
-  overflow-x: hidden;
-}
-
 body {
   background: $footerBackground;
   color: $textColor;
